@@ -1,3 +1,7 @@
+2005-12-10 Oliver Brakmann <oliverbrakmann@users.berlios.de>
+
+	* scripts/pkginfo.in: Removed occurences of .pkg extensions
+
 2005-12-04 Oliver Brakmann <oliverbrakmann@users.berlios.de>
 
 	* profiles/lfs-6.1/lfs.pkg: Simplified checks for existing lfs user and
